--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>AlcherTask1</title>
+        <title>Movie Website</title>
         <link rel="stylesheet" type="text/css" href="styling.css" >
     </head>
 
